--- a/internshipLogisticTool/src/main/resources/application.properties
+++ b/internshipLogisticTool/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=${PORT:8080}
 
+
+#Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
