--- a/internshipLogisticTool/src/main/resources/application.properties
+++ b/internshipLogisticTool/src/main/resources/application.properties
@@ -5,5 +5,5 @@ server.port=${PORT:8080}
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
